trying to fix visual bug on smaller screen sizes

--- a/src/pages/Contact/index.css
+++ b/src/pages/Contact/index.css
@@ -112,6 +112,10 @@
     .contact-submitContainer{
         right: 0;
     }
+
+    .contact-message {
+        margin-bottom: 10px;
+    }
 }
 
 @media screen and (max-width: 300px) {
